--- a/REPO.html
+++ b/REPO.html
@@ -6,24 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <H1> GAY BITS </H1>
-    <p> SAGING SAGING </p>
-    <p> Papaya Papaya </p>
-    <p>Bading si arth</p>
-    <p>Sample 123 bading si arth</p>
-    <p>Sample 123 bading si arth</p>
-    <p> BADING SI ARTH</p>
-    <P> SHATATTAK</P>
-    <p> SAGING SAGING </p>
-    <p> Papaya Papaya </p>
-    <p> SAGING SAGING </p>
-    <p> Papaya Papaya </p>
-    <p> SAGING SAGING </p>
-    
-    <p> Papaya Papaya </p>
-    <p> SAGING SAGING </p>
-    <p> Papaya Papaya </p>
-    <p> SAGING SAGING </p>
-    <p> Papaya Papaya </p>
+    <h1>    Sample 1234</h1>
 </body>
 </html>
